// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`assert openAI > online order 1`] = `
{
  "data": [
    {
      "name": "Very Tangerine Blast (Original)",
      "price": "6.82",
    },
    {
      "name": "Mango Grapefruit Pops",
      "price": "6.54",
    },
  ],
  "errors": [],
  "language": "zh",
}
`;

exports[`assert openAI > todo 1`] = `
{
  "data": [
    "Learn Python",
    "Learn Rust",
    "Learn AI",
  ],
  "errors": [],
  "language": "en",
}
`;

exports[`assert openAI > todo obj 1`] = `
{
  "data": [
    {
      "checked": false,
      "text": "Learn Python",
    },
    {
      "checked": false,
      "text": "Learn Rust",
    },
    {
      "checked": false,
      "text": "Learn AI",
    },
  ],
  "errors": [],
  "language": "en",
}
`;
